feat: switch to multiplatform build & publication